Update and rename mypage.html to index.html

--- a/testJury/index.html
+++ b/testJury/index.html
@@ -53,7 +53,7 @@
 	<button class="tablinks" onclick="openCity(event, 'red')">HELP</button>
     </div></div>
 <!-- Вкладка 1 -->
-<div id="One" class="tabcontent"><h3>12:23 СМОТР GEEK дефиле: одиночное выступление 1</h3>
+<div id="One" class="tabcontent"><h3>test jury</h3>
 <div id="section1"></div>
 	</div>
 
