--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
 	<link rel="manifest" href="./manifest.json">
 </head>
 <body>
-	<!-- Картинка маскота
-	<img class="tyan"src="tyan.png" alt="tyan">-->
 <div class="main">
     <div class="head">
 	<header>
@@ -52,6 +50,8 @@
     <button class="tablinks" onclick="openCity(event, 'table')">Расписание</button> 
 	<button class="tablinks" onclick="openCity(event, 'red')">HELP</button>
     </div></div>
+
+	<img class="tyan"src="icons/girl.png" alt="tyan">
 <!-- Вкладка 1 -->
 <div id="One" class="tabcontent"><h3>12:23 СМОТР GEEK дефиле: одиночное выступление 1</h3>
 <div id="section1"></div>
