--- a/testJury/index.html
+++ b/testJury/index.html
@@ -40,8 +40,6 @@
 	<link sizes="180x180" rel="apple-touch-icon" href="icons/apple-touch-icon-180x180.png">
 </head>
 <body>
-<!-- Маскот
-	<img class="tyan"src="tyan.png" alt="tyan">-->
 <div class="main">
     <div class="head">
 	<header>
@@ -61,7 +59,8 @@
 	<button class="tablinks"><a href="map.jpg" class="lightzoom">Карта ДК</a></button>
     <button class="tablinks" onclick="openCity(event, 'table')">Расписание</button> 
 	<button class="tablinks" onclick="openCity(event, 'red')">Итог</button>
-    </div></div>
+    </div></div>	
+	<img class="tyan"src="icons/girl.png" alt="tyan">
 <div id="One" class="tabcontent"><h3>12:23 СМОТР GEEK дефиле: одиночное выступление 1</h3>
 
 <button class="accordion">01-01-01	Torikitsme - Шарлотта Земляничка (Ягодный пирог: Шарлотта Земляничка)</button>
