--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
 <div class="main">
-    <div class="head">
+    <div>
 	<header>
     <!-- Верхняя панель -->
     <div class="tab"> <button class="tablinks" onclick="openCity(event, 'One')">Первый блок</button> 
