--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="Description" content="">
   	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width">
 	<meta name="msapplication-TileColor" content="#da532c">
 	<meta name="theme-color" content="#ffffff">
 	<!--Скрипты для аккардеона и таблицы-->
@@ -51,7 +51,7 @@
 	<button class="tablinks" onclick="openCity(event, 'red')">HELP</button>
     </div></div>
 
-	<!-- <img class="tyan"src="icons/girl.png" alt="tyan"> -->
+	<img class="tyan"src="icons/girl.png" alt="tyan">
 <!-- Вкладка 1 -->
 <div id="One" class="tabcontent"><h3>12:23 СМОТР GEEK дефиле: одиночное выступление 1</h3>
 <div id="section1"></div>
