Fix ranges for day1

--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
 
 	<img class="tyan"src="icons/girl.png" alt="tyan">
 <!-- Вкладка 1 -->
-<div id="One" class="tabcontent"><h3>12:23 СМОТР GEEK дефиле: одиночное выступление 1</h3>
+<div id="One" class="tabcontent"><h3>1 часть смотр в 11:15. 2 часть смотр в 13:35</h3>
 <div id="section1"></div>
 	</div>
 
 <!-- Вкладка 2 -->
-<div id="Two" class="tabcontent"><h3>12:46 СМОТР Аниме дефиле: одиночное выступление 1</h3>
+<div id="Two" class="tabcontent"><h3>1 часть смотр в 14:40. 2 часть смотр в 16:25</h3>
 <div id="section2"></div>
 </div>
 <!-- Вкладка 3 -->
-<div id="Three" class="tabcontent"><h3>13:12 СМОТР Game дефиле: одиночное выступление 1 </h3>
+<div id="Three" class="tabcontent"><h3>1 часть смотр в 17:25. 2 часть смотр в 19:00</h3>
 <div id="section3"></div>
 </div>
 
