--- a/testJury/index.html
+++ b/testJury/index.html
@@ -63,17 +63,17 @@
 	<button class="tablinks" onclick="openCity(event, 'red')">Итог</button>
     </div></div>
 	<img class="tyan"src="icons/girl.png" alt="tyan">
-<div id="One" class="tabcontent"><h3>1 часть смотр в 11:15. 2 часть смотр в 13:35</h3>
+<div id="One" class="tabcontent"><h3>1 часть(от 04 до 07) смотр в 11:15. 2 часть(от 08 до 10) смотр в 13:35</h3>
 	<div id="section1"></div>
 	</div>
 
 <!-- Вкладка 2 -->
-<div id="Two" class="tabcontent"><h3>1 часть смотр в 14:40. 2 часть смотр в 16:25</h3>
+<div id="Two" class="tabcontent"><h3>1 часть(от 14 до 16) смотр в 14:40. 2 часть(от 18 до 20) смотр в 16:25</h3>
 	<div id="section2"></div>
 </div>
 
 <!-- Вкладка 3 -->
-<div id="Three" class="tabcontent"><h3>1 часть смотр в 17:25. 2 часть смотр в 19:00</h3>
+<div id="Three" class="tabcontent"><h3>1 часть(от 23 до 25) смотр в 17:25. 2 часть(от 27 до 29) смотр в 19:00</h3>
 <div id="section3"></div>
 </div>
 
