--- a/testJury/index.html
+++ b/testJury/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="ru"><head><meta charset="utf-8" />
+<html lang="ru">
+<head>
+	<meta charset="utf-8"/>
 	<title>Mako</title>
 	<base href=".">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Keywords" content="">
     <meta name="Description" content="">
 	<meta name="msapplication-TileColor" content="#da532c">
@@ -72,14 +74,8 @@
 <div id="table" class="tabcontent">
 <table id="schedule" class="table_blur">
         <thead>
-		<!-- Заголовки. Не обязательны
-            <tr>
-                <th>Номер</th>
-                <th>Выступающий</th>
-            </tr> -->
         </thead>
         <tbody>
-            <!-- Данные будут загружены сюда через JavaScript -->
         </tbody>
     </table></div>
 
