Revert "Fix again"
This reverts commit 143b05bcb3a6fc9f7bfcbc55f8e14c49249b7cca.

--- a/testJury/index.html
+++ b/testJury/index.html
@@ -4,7 +4,7 @@
 	<base href=".">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="Keywords" content="">
     <meta name="Description" content="">
 	<meta name="msapplication-TileColor" content="#da532c">
@@ -49,6 +49,15 @@
     <div class="tab"> <button class="tablinks" onclick="openCity(event, 'One')">Первый блок</button> 
     <button class="tablinks" onclick="openCity(event, 'Two')">Второй блок</button>
     <button class="tablinks" onclick="openCity(event, 'Three')">Третий блок</button>
+	<!--<button class="tablinks" onclick="openCity(event, 'Four')">1-14 GEEK</button>
+    <button class="tablinks" onclick="openCity(event, 'Five')">1 Парн</button>
+    <button class="tablinks" onclick="openCity(event, 'Six')">2-02 GEEK</button>
+	<button class="tablinks" onclick="openCity(event, 'Seven')">2-07 Тема</button>
+	<button class="tablinks" onclick="openCity(event, 'Eight')">2-14 Групп</button>
+    <button class="tablinks" onclick="openCity(event, 'Nine')">2-19 Парн</button>
+    <button class="tablinks" onclick="openCity(event, 'Ten')">2-22 Ani</button>
+	<button class="tablinks" onclick="openCity(event, 'Eleven')">3-02 Групп</button>
+    <button class="tablinks" onclick="openCity(event, 'Tvelve')">3-07 GEEK</button>-->
 	<button class="tablinks"><a href="map.jpg" class="lightzoom">Карта ДК</a></button>
     <button class="tablinks" onclick="openCity(event, 'table')">Расписание</button> 
 	<button class="tablinks" onclick="openCity(event, 'red')">Итог</button>
@@ -67,6 +76,52 @@
 <div id="Three" class="tabcontent"><h3>1 часть(от 23 до 25) смотр в 17:25. 2 часть(от 27 до 29) смотр в 19:00</h3>
 <div id="section3"></div>
 </div>
+
+<!-- Вкладка 4 
+<div id="Four" class="tabcontent"><h3>13:44 СМОТР  GEEK дефиле: одиночное выступление 2</h3>
+
+</div>
+
+<!-- Вкладка 5 
+<div id="Five" class="tabcontent"><h3>14:30 СМОТР Малое групповое Anime\Manga и geek</h3>
+
+</div>
+
+<!-- Вкладка 6 
+<div id="Six" class="tabcontent"><h3>15:26 СМОТР Game дефиле: одиночное выступление 2</h3>
+
+</div>
+
+<!-- Вкладка 7  
+<div id="Seven" class="tabcontent"><h3>16:19 СМОТР Тематическое дефиле</h3>
+
+</div>
+
+<!-- Вкладка 8
+<div id="Eight" class="tabcontent"><h3> 16:46 СМОТР Групповое дефиле 1</h3>
+
+</div>
+
+<!-- Вкладка 9 
+<div id="Nine" class="tabcontent"><h3>17:15 СМОТР Малое групповое Game </h3>
+
+</div>
+
+<!-- Вкладка 10
+<div id="Ten" class="tabcontent"><h3>17:32 СМОТР Аниме/Манга дефиле: одиночное выступление 2</h3>
+
+</div>
+
+<!-- Вкладка 11 
+<div id="Eleven" class="tabcontent"><h3>18:15 СМОТР Групповое дефиле 2</h3>
+
+</div>
+
+<!-- Вкладка 12 
+<div id="Tvelve" class="tabcontent"><h3>19:12 СМОТР Game дефиле: одиночное выступление 3</h3>
+
+</div>
+
 
 <!--  Таблица -->
 <div id="table" class="tabcontent">
