--- a/testJury/index.html
+++ b/testJury/index.html
@@ -4,7 +4,7 @@
 	<base href=".">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+	<meta name="viewport" content="width=device-width">
     <meta name="Keywords" content="">
     <meta name="Description" content="">
 	<meta name="msapplication-TileColor" content="#da532c">
