--- a/christina/index.html
+++ b/christina/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="ru"><head><meta charset="utf-8" />
-	<title>Mako</title>
+	<title>Christina</title>
 	<base href=".">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
