--- a/odango/index.html
+++ b/odango/index.html
@@ -61,6 +61,7 @@
 	<button class="tablinks"><a href="map.jpg" class="lightzoom">Карта ДК</a></button>
     <button class="tablinks" onclick="openCity(event, 'table')">Расписание</button> 
 	<button class="tablinks" onclick="openCity(event, 'red')">Итог</button>
+	<button id="retryButton">Повторная отправка данных</button>
     </div></div>
 	<img class="tyan"src="icons/girl.png" alt="tyan">
 <div id="One" class="tabcontent"><h3>1 часть смотр в 11:15. 2 часть смотр в 13:35</h3>
