--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="ru"><head><meta charset="utf-8" />
-	<title>Mocon</title>
+	<title>Star Crew</title>
 	<base href=".">
     <meta name="Keywords" content="">
     <meta name="Description" content="">
