--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     <div class="tab"> <button class="tablinks" onclick="openCity(event, 'One')">Первый блок</button> 
     <button class="tablinks" onclick="openCity(event, 'Two')">Второй блок</button>
     <button class="tablinks" onclick="openCity(event, 'Three')">Третий блок</button>
-	<button class="tablinks"><a href="map.jpg" class="lightzoom" data-lightzoom>Карта ДК</a></button>
+	    <button class="tablinks" onclick="openCity(event, 'Four')">Четвёртый блок</button>
+	<button class="tablinks"><a href="map.jpg" class="lightzoom" data-lightzoom>Карта</a></button>
     <button class="tablinks" onclick="openCity(event, 'table')">Расписание</button> 
 	<button class="tablinks" onclick="openCity(event, 'red')">HELP</button>
     </div></div>
@@ -55,6 +56,10 @@
 <!-- Вкладка 3 -->
 <div id="Three" class="tabcontent">
 <div id="section3"></div>
+</div>
+<!-- Вкладка 4 -->
+<div id="Four" class="tabcontent">
+<div id="section4"></div>
 </div>
 
 <!--  Таблица -->
