--- a/jury/index.html
+++ b/jury/index.html
@@ -49,7 +49,7 @@
     <div class="tab"> <button class="tablinks" onclick="openCity(event, 'One')">Первый блок</button> 
     <button class="tablinks" onclick="openCity(event, 'Two')">Второй блок</button>
     <button class="tablinks" onclick="openCity(event, 'Three')">Третий блок</button>
-	<button class="tablinks"><a href="map.jpg" class="lightzoom">Карта ДК</a></button>
+	<button class="tablinks"><a href="map.jpg" class="lightzoom">Карта</a></button>
     <button class="tablinks" onclick="openCity(event, 'table')">Расписание</button> 
 	<button class="tablinks" onclick="openCity(event, 'red')">Итог</button>
 	<button class="tablinks" id="sendCacheButton">Отправить данные</button>
