--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </tbody>
     </table></div>
 <div id="red" class="tabcontent">
-<div><a href="tel:+7919608-19-69"><img src="help/med.png" alt="МЕДИК"/></a> <a href="tel:+7952523-41-75"><img src="help/tina.png" alt="ВОЛОНТЁРЫ"/></a><a href="tel:+7982761-52-38"><img src="help/sb.png" alt="ОХРАНА"/></a></div>
+<div><a href="tel:+7999999-99-99"><img src="help/med.png" alt="МЕДИК"/></a> <a href="tel:+7952523-41-75"><img src="help/kira.png" alt="kira"/></a><a href="tel:+7900629-25-29"><img src="help/margo.png" alt="margo"/></a></div>
 </div>
 </body>
 </html>
