--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	    <button class="tablinks" onclick="openCity(event, 'Four')">Четвёртый блок</button>
 	<button class="tablinks"><a href="map.jpg" class="lightzoom" data-lightzoom>Карта</a></button>
     <button class="tablinks" onclick="openCity(event, 'table')">Расписание</button> 
-	<button class="tablinks" onclick="openCity(event, 'red')">HELP</button>
+	<!--<button class="tablinks" onclick="openCity(event, 'red')">HELP</button>-->
     </div></div>
 
 	<img class="tyan"src="icons/girl.png" alt="tyan">
