--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <!-- Верхняя панель -->
     <div class="tab"> <button class="tablinks" onclick="openCity(event, 'One')">Первый блок</button> 
     <button class="tablinks" onclick="openCity(event, 'Two')">Второй блок</button>
-    <button class="tablinks" onclick="openCity(event, 'Three')">Третий блок</button>
-	    <button class="tablinks" onclick="openCity(event, 'Four')">Четвёртый блок</button>
+<!--     <button class="tablinks" onclick="openCity(event, 'Three')">Третий блок</button>
+	<button class="tablinks" onclick="openCity(event, 'Four')">Четвёртый блок</button>-->
 	<button class="tablinks"><a href="map.jpg" class="lightzoom" data-lightzoom>Карта</a></button>
     <button class="tablinks" onclick="openCity(event, 'table')">Расписание</button> 
 	<!--<button class="tablinks" onclick="openCity(event, 'red')">HELP</button>-->
