--- a/jury/index.html
+++ b/jury/index.html
@@ -48,7 +48,7 @@
     <!-- Верхняя панель -->
     <div class="tab"> <button class="tablinks" onclick="openCity(event, 'One')">Первый блок</button> 
     <button class="tablinks" onclick="openCity(event, 'Two')">Второй блок</button>
-    <button class="tablinks" onclick="openCity(event, 'Three')">Третий блок</button>
+<!--     <button class="tablinks" onclick="openCity(event, 'Three')">Третий блок</button>-->
 	<button class="tablinks"><a href="map.jpg" class="lightzoom">Карта</a></button>
     <button class="tablinks" onclick="openCity(event, 'table')">Расписание</button> 
 	<button class="tablinks" onclick="openCity(event, 'red')">Итог</button>
